src/assets/css/calendar.css
/**
 * Copyright (c) 2025 Helium Edu
 *
 * Stylesheet for the /planner/calendar pages.
 *
 * @license MIT
 * @version 1.11.54
 */

body {
    background-color: #ffffff;
}

.datepicker {
    z-index: 1151 !important;
}

input.calendar-homework-checkbox {
    width: 10px !important;
    height: 10px !important;
}

.page-content {
    padding-bottom: 0;
}

.fc-toolbar {
    margin-top: 8px;
}

.fc-toolbar h2 {
    margin-top: 3px;
    margin-left: 7px;
    font-size: 15px;
}

#calendar-classes, #calendar-filters {
    margin-right: 6px;
    margin-top: -2px;
}

#calendar-classes-list, #calendar-filter-list {
    margin-top: -1px;
}

#calendar-filter-list li,
#calendar-classes li{
    text-align: right;
}

.filter-course-title:hover {
    color: #ffffff !important;
}

.filter-strike {
    display: block;
    text-align: center;
    overflow: hidden;
    white-space: nowrap;
}

.filter-strike > span {
    position: relative;
    display: inline-block;
    font-size: 13px;
}

.filter-strike > span:before,
.filter-strike > span:after {
    content: "";
    position: absolute;
    top: 50%;
    width: 9999px;
    height: 1px;
    background: #e5e5e5;
}

.filter-strike > span:before {
    right: 100%;
    margin-right: 15px;
}

.filter-strike > span:after {
    left: 100%;
    margin-left: 15px;
}

#search-bar {
    margin-left: 10px;
    margin-top: -2px;
}

#edit-categories {
    margin-top: 2px !important;
}

ul.dropdown-menu-form {
    padding: 5px 10px 0;
    max-height: 300px;
    overflow-y: scroll;
}

#calendar-classes-list a > input, #calendar-filter-list a > input {
    margin-left: -5px;
}

a.fc-event:hover {
    color: white;
}

input[type=checkbox].ace.ace-switch + .lbl[data-lbl]::before {
    content: attr(data-lbl);
}

input[type=checkbox].ace.ace-switch + .lbl::before, input[type=checkbox].ace.ace-switch {
    width: 95px;
}

input[type=checkbox].ace.ace-switch:checked + .lbl::after {
    left: 78px;
}

input[type=checkbox].ace.ace-switch:checked + .lbl::before {
    text-indent: 41px;
}

.qtip-bootstrap {
    z-index: 500 !important;
}

#homework-grade-percent {
    margin-top: 5px;
}

.fc-row table th {
    border-top: 0 hidden transparent;
}

.fc-list-table th {
    border-width: 1px 0 0;
    padding: 8px 14px;
}

.fc-list-table th {
    border-top-width: 0;
}

.fc-list-heading th {
    font-weight: bold;
}

